--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     url: r2dbc:mysql://localhost:3306/store?tlsVersion=TLSv1.2&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Seoul
     password: 1234
     username: root
+#error message 사용하기
+graphql:
+  servlet:
+    exception-handlers-enabled: true
